--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "yask",
   "packageManager": "yarn@3.6.3",
-  "description": "",
-  "version": "1.0.0",
+  "description": "Best Cache.",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "types": "./typings/index.d.ts",
   "scripts": {
